@startuml
package "shared.domain.model" {
    class Currency {
        - #code: CurrencyCode
        + code: CurrencyCode
        + formatAmount(amount: number, locale: string): string
        + toString(): string
    }

    class Money {
        - #amount: number
        - #currency: Currency
        + amount: number
        + currency: Currency
        + format(locale: string): string
        + toString(): string
        + add(other: Money): Money
        + multiply(factor: number): Money
    }

    class DateTime {
        - #date: Date
        + value: Date
        + format(locale: string): string
        + toString(): string
    }
}

package "crm.domain.model" {
    class CustomerId {
        - #id: string
        + id: string
    }

    class Customer {
        - #id: CustomerId
        - #name: string
        - #lastOrderPrice: Money | null
        + id: CustomerId
        + name: string
        + lastOrderPrice: Money | null
    }
}

package "sales.domain.model" {

    class ProductId {
        - #id: string
        + id: string
    }

    class SalesOrderId {
        - #id: string
        + id: string
    }

    class SalesOrderItem {
        - #orderId: SalesOrderId
        - #itemId: string
        - #productId: ProductId
        - #quantity: number
        - #unitPrice: Money
        + orderId: SalesOrderId
        + itemId: string
        + productId: ProductId
        + quantity: number
        + unitPrice: Money
        + calculateItemTotal(): Money
    }

    class SalesOrder {
        - #customerId: string
        - #id: SalesOrderId
        - #items: SalesOrderItem[]
        - #orderedAt: DateTime
        - #currency: Currency
        - #state: SalesOrderState
        + customerId: string
        + id: SalesOrderId
        + items: ReadonlyArray<SalesOrderItem>
        + orderedAt: DateTime
        + currency: Currency
        + state: SalesOrderState
        + addItem(productId: ProductId, quantity: number, unitPrice: Money): void
        + calculateTotalAmount(): Money
        + getFormattedOrderedAt(): string
        + confirm(): void
        + cancel(): void
        + ship(): void
    }
}

Customer "1" *-- "1" CustomerId
SalesOrder "1" *-- "1" SalesOrderId
SalesOrder "1" *-- "1..*" SalesOrderItem
SalesOrderItem "1" -- "1" ProductId
SalesOrderItem "1" -- "1" Money
Money "1" -- "1" Currency
SalesOrder "1" -- "1" DateTime
SalesOrder "1" -- "1" Currency
@enduml